Bug 1714069 - Block Mesa software drivers for HW-WR, r=aosmond

We currently allow software drivers such as `llvmpipe` to run HW-WR -
in nightly and  apparently even in release.
Explicitly make these drivers always use SW-WR instead.

While on it, improve our detection for software drivers in glxtest.
This may become handy for new software drivers such as zink+lavapipe.

Differential Revision: https://phabricator.services.mozilla.com/D116771